2008-10-23    <neal@bcn.boulder.co.us>

	* README (Features): 
	Release Version 0.8
	Highlight the features of ElectionAudits
	Update ToDo
	
2008-10-22    <neal@bcn.boulder.co.us>

	* electionaudits/views.py (StatsForm): 
	New ad-hoc /stats/ form: statistics for a given margin, confidence

	* electionaudits/varsize.py (rule_of_thumb): 
	Call rule_of_thumb from paper() for consistency
	Bug: needed "s" parameter to bmin() call for SAFE
	
	* electionaudits/parsers.py (parse_csv): 
	introduce --batchid option for distinguishing data from different files

	* electionaudits/models.py (Contest.selection_stats): 
	Cache selection_stats varsize results for speed
	Include prose form of stats in audit report
	
2008-10-21    <neal@bcn.boulder.co.us>

	* electionaudits/varsize.py (bmin): 
	Handle infinities with margin of 0 votes and problems with large margins
	Eliminate scipy requirement for electionaudits: only import where needed
	
	* electionaudits/parsers.py (parse_csv): 
	use -e option as election name for csv also

2008-10-20    <neal@bcn.boulder.co.us>

	* electionaudits/parsers.py (main): 
	Rename makeauditunits to electionaudits/parsers.py
	Make it easier to use, via a new manage.py "parse" command:
	   electionaudits/management/commands/parse.py
	Rename audittools directory to "root"

	* electionaudits/util.py (pushAuditUnit): 
	change min_ballots from 5 to 25

	* electionaudits/models.py (Contest.selection_stats): 
	Make varsize statistics for Contest available via selection_stats()
	First cut - not saving results - really inefficient....
	
	* electionaudits/varsize.py (read_precincts): 
	Make it easier to use varsize logic from electionaudits
	Accept a list (iterable) of precincts as the input source as well as a
	filename.
	Return the most interesting results from paper() in a dict.
	Add parameters (with existing defaults) to paper(): alpha and s
	Don't generate plot or print full precinct list unless called
	as main program.