@@ -1,3 +1,9 @@
+2008-10-29    <neal@bcn.boulder.co.us>
+
+	* electionaudits/parsers.py (parse): 
+	if a directory arg is given to parse, parse each file in the directory
+	implement --chronological option and change -c to be that, not --contest
+	
 2008-10-23    <neal@bcn.boulder.co.us>
 
 	* README (Features): 
